force-app/main/default/objects/Additional_Charge__c/Additional_Charge__c.object-meta.xml
<CustomObject>
    <label>Additional Charge</label>
    <nameField>
        <displayFormat>AC-{00000}</displayFormat>
        <label>Charge Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Charges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>