force-app/main/default/objects/Additional_Charge__c/fields/Charge_Name__c.field-meta.xml
<CustomField>
    <fullName>Charge_Name__c</fullName>
    <description>Short name describing this charge.</description>
    <label>Charge Name</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>